[gd_scene load_steps=5 format=3 uid="uid://d1lookxkg66jn"]

[ext_resource type="Texture2D" uid="uid://dt1k3jupusff4" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0040.png" id="1_86kty"]
[ext_resource type="Script" path="res://main.gd" id="1_twv0h"]
[ext_resource type="Texture2D" uid="uid://b0wuhjmf5wol0" path="res://Assets/kenney_tiny-dungeon/Tiles/tile_0084.png" id="6_q2kqf"]

[sub_resource type="TileSet" id="TileSet_yw78s"]

[node name="Main" type="Node2D"]
script = ExtResource("1_twv0h")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -17.0
offset_top = -12.0
offset_right = 1162.0
offset_bottom = 659.0
texture = ExtResource("1_86kty")
stretch_mode = 1

[node name="SpawnerContainer" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnerContainer"]
position = Vector2(1085, 458)

[node name="Marker2D2" type="Marker2D" parent="SpawnerContainer"]
position = Vector2(1087, 287)

[node name="Marker2D3" type="Marker2D" parent="SpawnerContainer"]
position = Vector2(1074, 121)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(570, 612)
scale = Vector2(2, 2)
texture = ExtResource("6_q2kqf")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_yw78s")
format = 2

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
